事业群用户满39元

--- a/WebContent/crm/dynamicData_department_consumer.html
+++ b/WebContent/crm/dynamicData_department_consumer.html
@@ -690,7 +690,7 @@ $("#columnattention2").on("mouseout",function(event){
                        var consumer_base = jData[i].cusnum_base;
 
 
-                       infoStr = infoStr +"<td>"+jData[i].cusnum+"</td><td>"+consumer_ten+"</td><td>"+consumer_thirty_nine+"</td><td>"+jData[i].consumer_three_hundred+"</td><td>"+consumer_base+"</td></tr>"
+                       infoStr = infoStr +"<td>"+jData[i].cusnum+"</td><td>"+consumer_ten+"</td><td>"+consumer_thirty_nine+"</td><td>"+consumer_three_hundred+"</td><td>"+consumer_base+"</td></tr>"
 
 
                        $("#tradeType_tbody").append(infoStr);
