门店、国安侠、事业群用户页面

--- a/WebContent/crm/dynamicData_department_consumer.html
+++ b/WebContent/crm/dynamicData_department_consumer.html
@@ -139,12 +139,12 @@
       <section class="content-header">
         <div class="box box-default">
          	<div class="box-header h4 text-light-blue">
-          	<div class="pull-left "><strong>事业群用户</strong></div>
-          	
-         	<div class="pull-left text-red" style="font-size:75%">
-         			  
-			          &nbsp;&nbsp;注意：1.本月数据截止到昨天24点。</br>
-			</div>
+          	<strong>事业群用户</strong>
+
+
+                <small class="text-red" style="padding-left: 10px;">注意：1.本月数据是实时查询数据。</small></br>
+                <small class="text-red" style="padding-left: 147px;">2.‘消费用户超X元’是指消费大于X元的用户；‘消费用户满X元’是指消费大于或等于X元的用户。</small></br>
+
           </div>
           <div class="box-body">
             <form id="searchform">
