绩效数据-用户页面

--- a/WebContent/crm/dynamicData_department_consumer.html
+++ b/WebContent/crm/dynamicData_department_consumer.html
@@ -143,7 +143,7 @@
 
 
                 <small class="text-red" style="padding-left: 10px;">注意：1.本月数据是实时查询数据。</small></br>
-                <small class="text-red" style="padding-left: 147px;">2.‘消费用户超X元’是指消费大于X元的用户；‘消费用户满X元’是指消费大于或等于X元的用户。</small></br>
+                <small class="text-red" style="padding-left: 147px;">2."消费用户超X元"是指消费大于X元的用户；"消费用户满X元"是指消费大于或等于X元的用户。</small></br>
 
           </div>
           <div class="box-body">
