--- a/WebContent/crm/dynamicData_newAddCustomer_GMV.html
+++ b/WebContent/crm/dynamicData_newAddCustomer_GMV.html
@@ -135,7 +135,7 @@
                 <div class="box box-default">
                     <div class="box-header h4 text-light-blue" id="ff"><strong>国安侠用户</strong>
                     <small class="text-red" style="padding-left: 10px;">注意：1.本月数据截止到昨天24点。</small></br>
-                        <small class="text-red" style="padding-left: 147px;">2.‘消费用户超X元’是指消费大于X元的用户；‘消费用户满X元’是指消费大于或等于X元的用户。</small></br>
+                        <small class="text-red" style="padding-left: 147px;">2."消费用户超X元"是指消费大于X元的用户；"消费用户满X元"是指消费大于或等于X元的用户。</small></br>
 <!-- 		         	<small class="text-red" style="padding-left: 147px;">2.如果作为绩效数据使用，请确保于每月2号上午8点以后，下载上月数据。</small></br> -->
 		         	
                     </div>
