--- a/WebContent/crm/dynamicData_newaddcus_analysis.html
+++ b/WebContent/crm/dynamicData_newaddcus_analysis.html
@@ -142,7 +142,7 @@
         <div class="box box-default">
           <div class="box-header h4 text-light-blue" id="ff"><strong>门店用户</strong>
           <small class="text-red" style="padding-left: 10px;">注意：1.本月数据截止到昨天24点。</small></br>
-              <small class="text-red" style="padding-left: 128px;">2.‘消费用户超X元’是指消费大于X元的用户；‘消费用户满X元’是指消费大于或等于X元的用户。</small></br>
+              <small class="text-red" style="padding-left: 128px;">2."消费用户超X元"是指消费大于X元的用户；"消费用户满X元"是指消费大于或等于X元的用户。</small></br>
           </div>
           <div class="box-body">
             <div class="form-group col-lg-4">
