门店、国安侠、事业群用户页面

--- a/WebContent/crm/dynamicData_department_consumer.html
+++ b/WebContent/crm/dynamicData_department_consumer.html
@@ -143,7 +143,7 @@
 
 
                 <small class="text-red" style="padding-left: 10px;">注意：1.本月数据是实时查询数据。</small></br>
-                <small class="text-red" style="padding-left: 147px;">2."消费用户超X元"是指消费大于X元的用户；"消费用户满X元"是指消费大于或等于X元的用户。</small></br>
+                <small class="text-red" style="padding-left: 147px;">2."消费用户超XXX元"是指消费大于XXX元的用户；"消费用户满XXX元"是指消费大于或等于XXX元的用户。</small></br>
 
           </div>
           <div class="box-body">
@@ -235,7 +235,7 @@
                             <th width="14%">消费用户满39元</th>
                             <th width="14%">消费用户满300元</th>
                             <th width="12%"><font id="columnattention2" style="color:#337ab7;font-size:14px;font-weight:normal;">！</font>
-                                <font id="forcolumnattention2" style="color:#47b8ef;font-size: 12px;white-space: nowrap;position: absolute;top:-8px;z-index: 1000;display:none;left:-5px">消费用户满39元+消费用户满300元*7</font>基础消费用户</th>
+                                <font id="forcolumnattention2" style="color:#47b8ef;font-size: 12px;white-space: nowrap;position: absolute;top:-8px;z-index: 1000;display:none;left:-5px">消费用户满39元+消费用户满300元*7</font>有效用户数核算</th>
 	                    </tr>
                     </tbody>
                   </table>
