--- a/WebContent/crm/dynamicData_newAddCustomer_GMV.html
+++ b/WebContent/crm/dynamicData_newAddCustomer_GMV.html
@@ -135,7 +135,7 @@
                 <div class="box box-default">
                     <div class="box-header h4 text-light-blue" id="ff"><strong>国安侠用户</strong>
                     <small class="text-red" style="padding-left: 10px;">注意：1.本月数据截止到昨天24点。</small></br>
-                        <small class="text-red" style="padding-left: 147px;">2."消费用户超X元"是指消费大于X元的用户；"消费用户满X元"是指消费大于或等于X元的用户。</small></br>
+                        <small class="text-red" style="padding-left: 147px;">2."消费用户超XXX元"是指消费大于XXX元的用户；"消费用户满XXX元"是指消费大于或等于XXX元的用户。</small></br>
 <!-- 		         	<small class="text-red" style="padding-left: 147px;">2.如果作为绩效数据使用，请确保于每月2号上午8点以后，下载上月数据。</small></br> -->
 		         	
                     </div>
@@ -224,7 +224,7 @@
                                             <th width="10%">消费用户满39元</th>
                                             <th width="10%">消费用户满300元</th>
                                             <th width="10%"><font id="columnattention2" style="color:#337ab7;font-size:14px;font-weight:normal;">！</font>
-                                                <font id="forcolumnattention2" style="color:#47b8ef;font-size: 12px;white-space: nowrap;position: absolute;top:-8px;z-index: 1000;display:none;left:-36px">消费用户满39元+消费用户满300元*7</font>基础消费用户</th>
+                                                <font id="forcolumnattention2" style="color:#47b8ef;font-size: 12px;white-space: nowrap;position: absolute;top:-8px;z-index: 1000;display:none;left:-36px">消费用户满39元+消费用户满300元*7</font>有效用户数核算</th>
                                         </tr>
                                         </tbody>
                                     </table>
