--- a/WebContent/crm/dynamicData_newaddcus_analysis.html
+++ b/WebContent/crm/dynamicData_newaddcus_analysis.html
@@ -142,7 +142,7 @@
         <div class="box box-default">
           <div class="box-header h4 text-light-blue" id="ff"><strong>门店用户</strong>
           <small class="text-red" style="padding-left: 10px;">注意：1.本月数据截止到昨天24点。</small></br>
-              <small class="text-red" style="padding-left: 128px;">2."消费用户超X元"是指消费大于X元的用户；"消费用户满X元"是指消费大于或等于X元的用户。</small></br>
+              <small class="text-red" style="padding-left: 128px;">2."消费用户超XXX元"是指消费大于XXX元的用户；"消费用户满XXX元"是指消费大于或等于XXX元的用户。</small></br>
           </div>
           <div class="box-body">
             <div class="form-group col-lg-4">
@@ -211,12 +211,12 @@
 	                      <th width="10%">门店名称</th>
 	                      <th width="10%">门店编号</th>
 	                      <th width="11%">拉新用户超10元</th> 
-	                      <th width="10%">消费用户</th>
+	                      <th width="9%">消费用户</th>
 	                      <th width="10%">消费用户超10元</th>
                           <th width="10%">消费用户满39元</th>
                           <th width="10%">消费用户满300元</th>
-                          <th width="10%"><font id="columnattention2" style="color:#337ab7;font-size:14px;font-weight:normal;">！</font>
-                              <font id="forcolumnattention2" style="color:#47b8ef;font-size: 12px;white-space: nowrap;position: absolute;top:-8px;z-index: 1000;display:none;left:-40px">消费用户满39元+消费用户满300元*7</font>基础消费用户</th>
+                          <th width="11%"><font id="columnattention2" style="color:#337ab7;font-size:14px;font-weight:normal;">！</font>
+                              <font id="forcolumnattention2" style="color:#47b8ef;font-size: 12px;white-space: nowrap;position: absolute;top:-8px;z-index: 1000;display:none;left:-40px">消费用户满39元+消费用户满300元*7</font>有效用户数核算</th>
                         </tr>
                     </tbody>
                   </table>
