订单档案拉新标签优化

--- a/WebContent/crm/searchData_view.html
+++ b/WebContent/crm/searchData_view.html
@@ -498,9 +498,9 @@
                         <div class="form-group has-error col-lg-2">
 			                <select class="form-control select2" id="customer_isnew">
 			                	<option value="">全部</option>
-			               		<option value="0,10,20">拉新</option>
-			                	<option value="10,20">拉新超10元</option>
-			                	<option value="20">拉新超20元</option>
+			               		<option value="'0','10','20'">拉新</option>
+			                	<option value="'10','20'">拉新超10元</option>
+			                	<option value="'20'">拉新超20元</option>
 			              	</select>
 			           	</div>
 			           	<font id="showattention" style="top:7px;right:75px;color:#ff0000;font-size:16px;font-weight:bold;">!</font>
