修改订单金额结算为订单结算

--- a/WebContent/crm/filedown_list.html
+++ b/WebContent/crm/filedown_list.html
@@ -271,7 +271,7 @@
                             } else if(heml_name == "system"){
                                 heml_name = "系统推送";
                             }else if (heml_name == "DDJEJS") {
-                                heml_name = "订单金额结算"
+                                heml_name = "订单结算"
                             }
 
                             var url = dataresult[i].url;
