--- a/WebContent/crm/index_headquarters.html
+++ b/WebContent/crm/index_headquarters.html
@@ -255,7 +255,7 @@
                                         <dd style="position:relative;" id="report_syq"><a href="javascript:goToFileDownload()"><span class="fa fa-bar-chart"></span>结算数据</a>
                                             <img alt="" src="dist/img/beta.png" style="position:absolute; top:5px; width:40px; height:19px;"></dd>
                                         <!--<dd><a href="javascript:;"><span class="fa fa-home"></span>运营结算数据</a></dd>-->
-                                  		 <dd style="position:relative"><a href="javascript:goToOrderFileDownload()"><span class="fa fa-tasks"></span>订单金额结算</a></dd>
+                                  		 <dd style="position:relative"><a href="javascript:goToOrderFileDownload()"><span class="fa fa-tasks"></span>订单结算</a></dd>
                                     </dl>
                                 </div>
                             </div>
