--- a/WebContent/crm/order_download.html
+++ b/WebContent/crm/order_download.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>订单金额结算</title>
+  <title>订单结算</title>
    <link rel="shortcut icon" type="image/x-icon" href="../icon.png" />
   <meta content="width=device-width, initial-scale=0.3, maximum-scale=1, user-scalable=yes" name="viewport">  <!-- Bootstrap 3.3.6 -->
   <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
@@ -284,7 +284,7 @@
 					<div class="pull-left">
 						<div class="logo-lg">
 							<ul class="no-margin">
-								<li class="current"><em>订单金额结算</em></li>
+								<li class="current"><em>订单结算</em></li>
 							</ul>
 						</div>
 					</div>
@@ -366,7 +366,7 @@
       <section class="content-header">
         <div class="box box-default">
           <div class="box-header h4 text-light-blue">
-          	<div class="pull-left "><strong>订单金额结算查询</strong></div>
+          	<div class="pull-left "><strong>订单结算查询</strong></div>
           </div>
           <div class="box-body">
           	<div class="clearfix search-criteria">
@@ -1720,7 +1720,7 @@ $(".dialog_open").click(function(){
             $("#date").text(sdate);
             var now = new Date();
             var date = ((now.getMonth() + 1) < 10 ? "0" : "") + (now.getMonth() + 1) + "-" + (now.getDate() < 10 ? "0" : "") + now.getDate();
-            $("#userName").val("订单金额结算"+date);
+            $("#userName").val("订单结算"+date);
             dialogOpen()
         }else{
             crm_alert(0,"单次导出不能超过10万条记录，请调整搜索条件，确认结果条数后再试。");
