修改结算数据查询月份

--- a/WebContent/crm/download_file.html
+++ b/WebContent/crm/download_file.html
@@ -393,6 +393,7 @@
     var now_month =cur_date.getMonth();
     var max_year = cur_date.getFullYear();
     var now_date =cur_date.getDate();
+    var date28 =cur_date.getDate();
     var max_month = "";
 
     if(now_month>0&&now_month<10){
@@ -424,7 +425,7 @@
             if(max_year%4==0&&now_month==2){
                 now_date=29;
         }else{
-                now_date=31;
+                now_date=28;
             }
             if(max_month=="12"){
                 max_date = max_year+"-"+now_month +"-"+now_date;
@@ -434,6 +435,10 @@
             }
     }else{
         max_date = cur_date.getFullYear()+"-"+now_month +"-"+(now_date-1);
+    }
+    if(date28>27){
+        max_month = cur_date.getFullYear()+"-"+now_month +"-"+(cur_date.getDate());
+        year_month = cur_date.getFullYear()+"-"+now_month;
     }
     laydate.render({//月份控件
         elem:'#country_month',
